# DistExp

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  SETUP  init_manager.sh  init_worker.sh  make_env_build.sh
benchmark/: Makefile  inject_sketch_benchmark.cpp  install_benchmark.sh  sketch_benchmark.cpp  test_sketch.cpp
benchmark/plot/: op_time_plot.ipynb
benchmark/structures/: count_min_sketch.hpp  detail.hpp  exact.hpp  gxj_frequency_sketch.hpp  hierarchical_frequency_sketch.hpp  interval_sketch.hpp  range_frequency_sketch.hpp
exp_configs/: cloudlab_config.json  config.json  config2.json  default_config.json
exp_utils/: const.py  experiments  manager.py  redis_config.json  utils.py  worker.py
include/rest_rpc/: rpc_client.hpp  rpc_server.h
